crates/gradatum-server/src/context/snapshots/gradatum_server__context__render__tests__render_no_stubs_is_f35_parity.snap
---
source: crates/gradatum-server/src/context/render.rs
expression: out
---
Contexte assemblé pour : «ma query» · 1 note

### Titre A · decisions · 2026-06-26 · score=1.23
corps A

— source: [[01ABC]]
