crates/gradatum-server/src/context/snapshots/gradatum_server__context__render__tests__render_snapshot_structure.snap
---
source: crates/gradatum-server/src/context/render.rs
expression: out
---
Context assembled for: «ma query» · 1 note

### Titre A · decisions · 2026-06-26 · score=1.23
corps A

— source: [[01ABC]]
